src/core-crm/objects/Facilitator_Bio__c/Facilitator_Bio__c.object-meta.xml
<CustomObject>
    <label>Facilitator Bio</label>
    <nameField>
        <displayFormat>FN-{00000}</displayFormat>
        <label>Facilitator Bio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilitator Bios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>