src/core-crm/objects/Facilitator_Bio__c/fields/Bio_Title__c.field-meta.xml
<CustomField>
    <fullName>Bio_Title__c</fullName>
    <description>Title of the Facilitator Bio to distinguish multiple bios for a facilitator</description>
    <label>Bio Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>