src/core-crm/objects/Facilitator_Bio__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilitator Bios</relationshipLabel>
    <relationshipName>Facilitator_Bios</relationshipName>
    <type>Lookup</type>
</CustomField>