src/core-crm/objects/Facilitator_Bio__c/fields/Facilitator_Professional_Bio__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Professional_Bio__c</fullName>
    <label>Professional Bio</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>