src/core-crm/objects/Facilitator_Bio__c/fields/Professional_Bio__c.field-meta.xml
<CustomField>
    <fullName>Professional_Bio__c</fullName>
    <label>Professional Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>